// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > renders without crashing 1`] = `
<div>
  <div
    class="lunatic-input"
  >
    <label
      class="lunatic-label"
      for="input"
      id="label-input"
    >
      <span
        class="label-description"
      >
        description
      </span>
    </label>
    <div
      class="field-with-count"
    >
      <input
        aria-invalid="false"
        aria-labelledby="label-input"
        autocomplete="off"
        id="input"
        title="input"
        type="text"
        value="input"
      />
    </div>
  </div>
</div>
`;

exports[`Input > should handle readOnly 1`] = `
<div>
  <div
    class="lunatic-input"
  >
    <div
      class="field-with-count"
    >
      <input
        aria-invalid="false"
        aria-labelledby="label-number"
        autocomplete="off"
        id="number"
        readonly=""
        title="toto"
        type="text"
        value="toto"
      />
    </div>
  </div>
</div>
`;
